# p2p-mesh

./: .env.example  .env.prod.example  .gitignore  AUDIT-2026-05-08.md  CLAUDE.md  PRODUCTION.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  VERIFICATION-2026-05-07.md  benchmark.py  benchmark_report.html  benchmark_results.json  deploy.sh  security-audit-2026-05.md
.github/workflows/: deploy.yml
control-plane/: alembic.ini  requirements.txt
control-plane/alembic/: env.py
control-plane/app/: config.py  database.py  dependencies.py  main.py
control-plane/app/api/: acl.py  auth.py  billing.py  candidates.py  devices.py  ipam.py  network.py  relay.py  traffic.py  ws.py
control-plane/app/middleware/: logging.py  rate_limit.py
control-plane/app/models/: __init__.py  device.py  network.py  relay.py  traffic.py  user.py
control-plane/app/schemas/: candidate.py  device.py  traffic.py  user.py
control-plane/app/services/: auth_service.py  billing_service.py  device_service.py  nat_utils.py  network_service.py  relay_service.py  signaling_service.py
control-plane/scripts/: worker.py
dashboard/: index.html
data-plane/: Cargo.toml  fix_files.py
data-plane/scripts/: BUILD_GUIDE.md  build-windows.bat
data-plane/src/: lib.rs  main.rs
data-plane/src/acl/: mod.rs
data-plane/src/ai_routing/: mod.rs
data-plane/src/crypto/: mod.rs  noise.rs
data-plane/src/decentralized/: mod.rs
data-plane/src/dns/: mod.rs
data-plane/src/dpdk/: mod.rs
data-plane/src/ebpf/: mod.rs
data-plane/src/fastpath/: mod.rs
data-plane/src/http_gateway/: mod.rs
data-plane/src/ice/: connectivity.rs  mod.rs  path_selection.rs
data-plane/src/io_uring/: mod.rs
data-plane/src/ipam/: mod.rs
data-plane/src/mesh_routing/: babel.rs  distance_vector.rs  gossip.rs  mod.rs  topology.rs
data-plane/src/metrics/: mod.rs
data-plane/src/mobile/: mod.rs
data-plane/src/multipath/: mod.rs
data-plane/src/overlay/: mod.rs
data-plane/src/post_quantum/: mod.rs
data-plane/src/puncher/: mod.rs
data-plane/src/quic/: mod.rs
data-plane/src/quic_multipath/: mod.rs
data-plane/src/relay/: main.rs  mod.rs
data-plane/src/router/: mod.rs
data-plane/src/smart_relay/: mod.rs
data-plane/src/stun/: mod.rs
data-plane/src/tun/: mod.rs
data-plane/src/tunnel/: main.rs  mod.rs
data-plane/src/turn/: mod.rs
data-plane/tests/: module_check.rs
deployment/: .env.example  Dockerfile.api  Dockerfile.relay  Dockerfile.stun  Dockerfile.tunnel  docker-compose.enterprise.yml  docker-compose.microservices.prod.yml  docker-compose.microservices.yml  docker-compose.prod.yml  docker-compose.yml  init.sql
deployment/k8s/: api-deployment.yaml  relay-daemonset.yaml
deployment/k8s/microservices/: configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  postgres.yaml  redis.yaml  services.yaml
deployment/nginx/: nginx.conf  nginx.prod.conf
docs/: security-audit-2026-05.md
monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
monitoring/grafana/dashboards/: p2p-mesh-overview.json
monitoring/grafana/provisioning/datasources/: loki.yaml
p2p-mesh-release/configs/: .env.example  client.toml  relay.toml  stun.toml
p2p-mesh-release/scripts/: build-all.ps1  build-windows.ps1  windows-build.yml
scripts/: deploy-client.ps1  deploy-client.sh  deploy-server.sh  setup-server.sh  verify-upgrade.sh  verify.sh
services/auth-service/: Dockerfile  requirements.txt
services/auth-service/app/: api.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  service.py
services/relay-service/: Dockerfile  requirements.txt
services/relay-service/app/: api.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  service.py
services/shared/: pyproject.toml  setup.py
services/shared/app/: audit.py  config.py  database.py  jwt_utils.py  metrics.py  middleware.py  models_base.py  schemas_base.py  tracing.py  usage_middleware.py
services/signaling-service/: Dockerfile  requirements.txt
services/signaling-service/app/: api.py  config.py  dependencies.py  main.py  pubsub.py  service.py
services/usage-service/: .env.example  Dockerfile  requirements.txt
services/usage-service/app/: api.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  service.py
services/user-service/: .dockerignore  Dockerfile  requirements.txt
services/user-service/app/: api.py  config.py  dependencies.py  main.py  models.py  schemas.py  service.py
services/worker/: Dockerfile  requirements.txt
services/worker/app/: config.py  worker.py
