[package]
name = "p2p-mesh-dataplane"
version = "2.0.0"
edition = "2021"
description = "P2P Mesh Network — Production-grade overlay mesh platform with TUN routing, IPAM, ACL, ICE/TURN, QUIC, eBPF, DPDK, io_uring, Post-Quantum Crypto, and AI-powered routing (Phases 1-10)"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUN/TAP virtual network interface
tun = "0.6"

# IP network types (CIDR, IpNet)
ipnet = { version = "2", features = ["serde"] }

# DNS protocol
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"

# JSON Schema validation for ACL policies
jsonschema = "0.17"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# UDP socket operations
socket2 = "0.5"

# Cryptography: ChaCha20-Poly1305 (AEAD)
chacha20poly1305 = "0.10"
chacha20 = "0.9"

# Noise Protocol Framework (WireGuard-like crypto)
snow = "0.9"

# Random number generation
rand = "0.8"

# Serialization for wire protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# HTTP client (rustls-tls avoids OpenSSL dep)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

# Logging
log = "0.4"
env_logger = "0.11"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Base64 encoding for keys
base64 = "0.22"

# X25519 ECDH key exchange
x25519-dalek = "2"

# SHA-256 for hashing
sha2 = "0.10"

# HMAC for relay packet authentication
hmac = "0.12"

# Zeroing memory for security
zeroize = { version = "1", features = ["derive"] }

# Time utilities
chrono = "0.4"

# QUIC Transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13" }

# Fast random number generation (small, no_std compatible)
fastrand = "2"

# Additional utilities
thiserror = "2.0"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

# Async trait support
async-trait = "0.1"

# IP address utilities
ipnetwork = "0.20"

# Optional: Android JNI bindings for mobile module (Phase 7)
jni = { version = "0.21", optional = true }

[features]
default = []
# Enable Android JNI bindings for mobile mesh client
jni = ["dep:jni"]
# Enable DPDK userspace networking (requires libdpdk-dev)
dpdk = []
# Enable io_uring async I/O (requires Linux 5.1+)
io-uring = []
# Enable post-quantum cryptography
pqc = []

[[bin]]
name = "mesh-tunnel"
path = "src/bin/mesh-tunnel.rs"

[[bin]]
name = "mesh-relay"
path = "src/bin/mesh-relay.rs"

[[bin]]
name = "mesh-stun"
path = "src/bin/mesh-stun.rs"

[[bin]]
name = "mesh-overlay"
path = "src/bin/mesh-overlay.rs"
